--- a/Delivery Calculator/Base.lproj/Main.storyboard
+++ b/Delivery Calculator/Base.lproj/Main.storyboard
@@ -114,6 +114,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Tgi-Wd-ARm" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rOu-yl-JH7">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
